--- a/Motor gráfico/CMakeLists.txt
+++ b/Motor gráfico/CMakeLists.txt
@@ -1,13 +1,16 @@
 
 include_directories(
    ../utilidades/log
+	../src
 ) 
 
 file(GLOB GRAFICO src/*.cpp src/*/*.cpp terceros/imagenes/*.cpp)
 # terceros/*/*.cpp
 add_library(motor_grafico SHARED ${GRAFICO})
-target_link_libraries( motor_grafico  ${CONAN_LIBS} utilidades)
-
+target_link_libraries( motor_grafico  ${CONAN_LIBS} utilidades modulos)
+set_target_properties(motor_grafico PROPERTIES
+	COMPILE_DEFINITIONS EXPORTAR_MODULO_GRAFICO
+    PUBLIC_HEADER src/motor.h )
 
 
 #if(WIN32)
@@ -16,6 +19,3 @@ target_link_libraries( motor_grafico  ${CONAN_LIBS} utilidades)
 	 
 #endif()
 add_subdirectory("terceros/opengl")
-set_target_properties(motor_grafico PROPERTIES
-	COMPILE_DEFINITIONS EXPORTAR_MODULO_GRAFICO
-    PUBLIC_HEADER src/motor.h )
