--- a/Motor gráfico/terceros/opengl/CMakeLists.txt
+++ b/Motor gráfico/terceros/opengl/CMakeLists.txt
@@ -1,10 +1,13 @@
 
+include_directories(
 
+	../../src
+) 
 file(GLOB GRAFICO src/*.cpp src/*/*.cpp)
 # terceros/*/*.cpp
 add_library(motor_grafico_gl SHARED ${GRAFICO})
 #target_link_libraries( motor_grafico_gl  ${CONAN_LIBS} )
-target_link_libraries(motor_grafico_gl motor_grafico)
+target_link_libraries(motor_grafico_gl motor_grafico modulos)
 if(WIN32)
 	target_link_libraries( motor_grafico_gl OpenGL32.lib Glu32.lib)
 elseif(UNIX)
