Verisón con librerias dinámicas + ejemplo de juego

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 ﻿cmake_minimum_required(VERSION 3.0.0)
 
 project(2dMotorGame)
+
 find_program(conan conan)
 execute_process(COMMAND ${conan} install -s build_type=${CMAKE_BUILD_TYPE} ${CMAKE_CURRENT_SOURCE_DIR})
 
@@ -14,8 +15,25 @@ set_target_properties(modulos PROPERTIES
 	COMPILE_DEFINITIONS EXPORTAR_MODULO
     PUBLIC_HEADER src/modulos.h )
 
-add_subdirectory("Motor gráfico")
+make_directory(${CMAKE_BINARY_DIR}/bin/modulos)
+#[[if(WIN32)
+	add_custom_command(
+    TARGET modulos POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        ${CMAKE_BINARY_DIR}/bin/modulos.dll
+        ${CMAKE_BINARY_DIR}/bin/modulos
+   )
+elseif(UNIX)
+	add_custom_command(
+    TARGET modulos POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        ${CMAKE_BINARY_DIR}/bin/modulos.so
+        ${CMAKE_BINARY_DIR}/bin/modulos
+    )
+endif()]]
 add_subdirectory("utilidades")
+add_subdirectory("graphics")
+add_subdirectory("cartucho")
 
 include_directories(
    src
@@ -23,7 +41,7 @@ include_directories(
 	utilidades/log
 ) 
 
-file(GLOB CODIGO src/*.cpp )
+file(GLOB CODIGO src/*.cpp )# graphics/src/renderable/renderable.h
 #file(GLOB MOTOR src/Motor/*/*.cpp src/Motor/*.cpp)
 
 #file(GLOB MOTORGL src/terceros/*/*.cpp)
@@ -34,7 +52,9 @@ if(WIN32)
 else()
 	add_executable(2dMotorGame ${CODIGO})
 endif()
+set_property(TARGET 2dMotorGame PROPERTY CXX_STANDARD 20)
+
+target_link_libraries( 2dMotorGame  motor_grafico utilidades cartucho)
 
 
-target_link_libraries( 2dMotorGame  motor_grafico utilidades)
-
+add_subdirectory("ejemplos")
