--- a/graphics/CMakeLists.txt
+++ b/graphics/CMakeLists.txt
@@ -2,15 +2,17 @@
 include_directories(
    ../utilidades/log
 	../src
+   ../modules/src
+   ../modules/graphic
    src
 ) 
 
 
-file(GLOB GRAFICO src/motor.cpp terceros/imagenes/*.cpp)
+file(GLOB GRAFICO terceros/imagenes/*.cpp)
 file(GLOB RENDERIZABLES src/renderable/object.cpp src/renderable/pixel.cpp src/renderable/img.cpp src/renderable/renderable.cpp src/renderable/cube.cpp )
 # terceros/*/*.cpp
 add_library(motor_grafico SHARED  ${RENDERIZABLES} ${GRAFICO})
-target_link_libraries( motor_grafico  ${CONAN_LIBS} utilidades modulos)
+target_link_libraries(motor_grafico  ${CONAN_LIBS} utils modules components)
 set_target_properties(motor_grafico PROPERTIES
 	COMPILE_DEFINITIONS EXPORTAR_MODULO_GRAFICO
     PUBLIC_HEADER src/motor.h )
@@ -40,3 +42,4 @@ elseif(UNIX)
 endif()]]
 
 add_subdirectory("terceros/opengl")
+add_subdirectory("terceros/opengl4")
