--- a/graphics/terceros/opengl/CMakeLists.txt
+++ b/graphics/terceros/opengl/CMakeLists.txt
@@ -1,6 +1,8 @@
 
 include_directories(
 	../../src
+   ../../modules/graphic
+   ../../modules/src
 ) 
 file(GLOB GRAFICO src/*.cpp src/*/*.cpp)
 # terceros/*/*.cpp
@@ -11,7 +13,7 @@ add_library(motor_grafico_gl SHARED ${GRAFICO})
 #)
 
 #target_link_libraries( motor_grafico_gl  ${CONAN_LIBS} )
-target_link_libraries(motor_grafico_gl motor_grafico modulos)
+target_link_libraries(motor_grafico_gl motor_grafico modules)
 
 if(WIN32)
 	target_link_libraries( motor_grafico_gl OpenGL32.lib Glu32.lib)
