--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(
 file(GLOB CODIGO modulos/*/*.cpp src/*.cpp)
 
 add_library(components SHARED ${CODIGO})
+set_property(TARGET components PROPERTY CXX_STANDARD 20)
 target_link_libraries( components  ${CONAN_LIBS} utils modules)
 set_target_properties(components PROPERTIES
 	COMPILE_DEFINITIONS EXPORTAR_COMPONENTE
