--- a/graphics/CMakeLists.txt
+++ b/graphics/CMakeLists.txt
@@ -9,10 +9,11 @@ include_directories(
 
 
 file(GLOB GRAFICO terceros/imagenes/*.cpp)
-file(GLOB RENDERIZABLES src/renderable/object.cpp src/renderable/pixel.cpp src/renderable/img.cpp src/renderable/renderable.cpp src/renderable/cube.cpp)
+file(GLOB RENDERIZABLES src/renderable/object.cpp src/renderable/pixel.cpp src/renderable/img.cpp src/renderable/renderable.cpp src/renderable/cube.cpp src/renderable/mesh.cpp)
+file(GLOB CARGAMODELOS src/modelos_graficos/modelo.cpp src/modelos_graficos/obj.cpp)
 # terceros/*/*.cpp
-add_library(motor_grafico SHARED  ${RENDERIZABLES} ${GRAFICO})
-set_property(TARGET motor_grafico PROPERTY CXX_STANDARD 20)
+add_library(motor_grafico SHARED  ${RENDERIZABLES} ${GRAFICO} ${CARGAMODELOS})
+set_property(TARGET motor_grafico PROPERTY CXX_STANDARD 20) 
 target_link_libraries(motor_grafico  ${CONAN_LIBS} utils modules components )
 set_target_properties(motor_grafico PROPERTIES
 	COMPILE_DEFINITIONS EXPORTAR_MODULO_GRAFICO
